2024-08-22  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Activate the menu in XEmacs.
	Use positive condition for feature.

	* ebuild-mode.el (ebuild-mode-menu): Drop :active keyword because
	the three-element vector form of menu items is more portable.
	(ebuild-repo-mode-menu): Rename menu bar item to "Ebuild-Repo".
	Replace :visible keyword by :included; XEmacs 21.4 doesn't know
	the former.

	* ebuild-mode.el (ebuild-mode-update-copyright): Save match data,
	replace-match in XEmacs 21.4 clobbers it.

2024-08-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-stable-list): Use push.

	* ebuild-mode.el (ebuild-mode-collect-and-split): Don't copy the
	element when creating a cons cell is enough.
	* test/ebuild-mode-tests.el (ebuild-mode-test-collect-and-split):
	Update.

2024-08-19  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el:
	* ebuild-mode-keywords.el:
	* gentoo-newsitem-mode.el:
	* glep-mode.el:
	* devbook-mode.el: Doc fixes.

	* ebuild-mode.el (ebuild-run-command-*): Run the "clean" command
	when a prefix argument is given.
	* ebuild-mode.texi (ebuild-mode): Document it.

	* ebuild-mode.el (ebuild-mode-find-image-dir): New function.
	(ebuild-mode-prefix-map, ebuild-mode-menu): Keybinding and
	menu entry.
	* ebuild-mode.texi (ebuild-mode): Document it.

2024-08-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-run-command-*): Define functions
	for ebuild subcommands.
	(ebuild-mode-prefix-map): New variable, keymap for ebuild-mode
	commands. Define C-c C-e <letter> keys for the most common ebuild
	subcommands.
	(ebuild-mode-map): Use the new keymap.
	(ebuild-mode-menu): Use ebuild-run-command-* functions in menu
	items; for the previously used expressions, easy-menu-define would
	create internal functions anyway. Don't sort ebuild-commands-list
	because it already is in alphabetical order.
	* ebuild-mode.texi (ebuild-mode): Update.

	* ebuild-mode.el (ebuild-commands-list): Add "instprep" and